--- a/QAnn/mainwindow.ui
+++ b/QAnn/mainwindow.ui
@@ -18,6 +18,19 @@
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
+       <spacer name="verticalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
        <widget class="QPushButton" name="pushButtontrain">
         <property name="text">
          <string>Train</string>
